# hx1-rag-bench

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: qwen25_72b_awq_bge_m3_hotpotqa.yaml  qwen25_72b_awq_bge_m3_musique.yaml  qwen25_72b_awq_bge_m3_two_wiki.yaml  qwen25_72b_awq_bm25_hotpotqa.yaml  qwen25_72b_awq_bm25_musique.yaml  qwen25_72b_awq_bm25_two_wiki.yaml  qwen25_72b_awq_hybrid_rrf_hotpotqa.yaml  qwen25_72b_awq_hybrid_rrf_musique.yaml  qwen25_72b_awq_hybrid_rrf_two_wiki.yaml  qwen25_7b_bge_m3_hotpotqa.yaml  qwen25_7b_bge_m3_musique.yaml  qwen25_7b_bge_m3_two_wiki.yaml  qwen25_7b_bm25_hotpotqa.yaml  qwen25_7b_bm25_musique.yaml  qwen25_7b_bm25_two_wiki.yaml  qwen25_7b_hybrid_rrf_hotpotqa.yaml  qwen25_7b_hybrid_rrf_musique.yaml  qwen25_7b_hybrid_rrf_two_wiki.yaml
docs/: baseline_qwen25_7b.md
scripts/: aggregate_results.py  gen_configs.py
src/hx1_rag_bench/: cli.py  config.py
src/hx1_rag_bench/data/: __init__.py  loaders.py
src/hx1_rag_bench/eval/: __init__.py  metrics.py
src/hx1_rag_bench/inference/: engine.py  prompts.py
src/hx1_rag_bench/pipeline/: __init__.py  runner.py
src/hx1_rag_bench/retrieval/: __init__.py  base.py  bge_m3.py  bm25.py  rrf.py
tests/: test_bm25.py  test_data_loaders.py  test_metrics.py  test_rrf.py
