[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hx1-rag-bench"
version = "0.1.0"
description = "Industrial-grade RAG inference benchmark and diagnosis framework on Imperial HX1 A100"
authors = [{name = "Ziheng Fan", email = "zf1225@ic.ac.uk"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "vllm>=0.6.4",
    "torch>=2.5.0",
    "transformers>=4.46",
    "accelerate>=1.0",
    "FlagEmbedding>=1.3,<1.4",  # 1.4.0 passes dtype= to AutoModel.from_pretrained; needs transformers>=4.50 (vLLM 0.6.4 wants <4.50)
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "datasets>=3.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.13",
    "rich>=13.9",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.28",
    "rouge-score>=0.1.2",
    "nltk>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.3",
]
viz = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.24",
]

[project.scripts]
rag-bench = "hx1_rag_bench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
